--- a/DesignPatterns.Data/DesignPatterns.Data.csproj
+++ b/DesignPatterns.Data/DesignPatterns.Data.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DesignPatterns.Model\DesignPatterns.Model.csproj" />
+  </ItemGroup>
+
 </Project>
