--- a/DesignPatterns/DesignPatterns.ConsoleView.csproj
+++ b/DesignPatterns/DesignPatterns.ConsoleView.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DesignPatterns.Data\DesignPatterns.Data.csproj" />
+    <ProjectReference Include="..\DesignPatterns.Model\DesignPatterns.Model.csproj" />
+  </ItemGroup>
+
 </Project>
